# ctx-hub

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci-probe.yml  ci.yml  fmt-debug.yml  release.yml
docs/: codex-handoff.md  mvp-development-plan.md  mvp.md  poc-ci-policy.md  poc-sqlite-fts-demo.md  poc-sqlite-fts-result.md  requirements.md  rust-research-plan.md  sqlite-search-research-plan.md  storage-stage-status.md  technical-research-conclusion.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/core/: jsonl.rs  mod.rs  ngram.rs  output.rs  query.rs  record.rs  search.rs
src/mcp/: mod.rs
src/storage/: migration.rs  mod.rs  schema.rs  sqlite.rs
tests/: cli_smoke.rs  jsonl_import_export.rs  mcp_readonly.rs  ngram.rs  search_cjk.rs  search_fts.rs  search_ranking.rs  search_trigram.rs  storage_sqlite.rs
tests/common/: mod.rs
