[package]
name = "ctx-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.40.1", features = ["bundled-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4"] }
